force-app/main/default/objects/Order/fields/Requested_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery__c</fullName>
    <label>Requested Delivery</label>
    <type>Date</type>
</CustomField>